complete arrow feature

--- a/dan_test_item.html
+++ b/dan_test_item.html
@@ -432,6 +432,7 @@
                     <div class="arrowSub">
                         <div id="scrollToLeftSub" class="arrowSubItem"><i class="fas fa-angle-left"></i></div>
                         <div id="scrollToRightSub" class="arrowSubItem"><i class="fas fa-angle-right"></i></div>
+                    </div>
                 </div>
             </div>
         </section>
