--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>hello</h1>
     <a href="./dan_test_item.html">item.html</a>
+    <a href="">chay</a>
 </body>
 <script>
     // document.onload = function () { 
